--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,10 +42,13 @@ body {
 }
 .white-middle h2 {
   font-family: "LarishA";
-  font-size: 4rem;
+  font-size: 4.4rem;
+  font-weight: 800;
 }
 .white-middle p {
   font-family: "Work Sans", sans-serif;
+  line-height: 1.8;
+  margin-top: 1rem;
 }
 .white-middle li:nth-child(1) {
   grid-column: 5/span 2;
@@ -62,6 +65,44 @@ body {
 }
 .white-middle li:nth-child(5) {
   grid-column: 6/span 2;
+  grid-row: 9/span 2;
+}
+
+.white-bottom {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr 5fr 5fr 3fr 1fr;
+  max-width: 1440px;
+  list-style: none;
+}
+.white-bottom h2 {
+  font-family: "LarishA";
+  font-size: 4.4rem;
+  font-weight: 800;
+}
+.white-bottom p {
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.8;
+  margin-top: 1rem;
+}
+.white-bottom li:nth-child(1) {
+  grid-column: 2/span 2;
+  grid-row: 4/span 2;
+}
+.white-bottom li:nth-child(3) {
+  grid-column: 5/span 1;
+  grid-row: 5/span 2;
+  margin-top: 10vh;
+}
+.white-bottom li:nth-child(4) {
+  grid-column: 4/span 1;
+  grid-row: 7/span 2;
+}
+.white-bottom li:nth-child(5) {
+  grid-column: 1/span 2;
+  grid-row: 7/span 2;
+}
+.white-bottom li:nth-child(6) {
+  grid-column: 5/span 2;
   grid-row: 9/span 2;
 }
 
