--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,13 +39,15 @@
 
     h2 {
         font-family: $font-A;
-        font-size: 4rem;
+        font-size: 4.4rem;
+        font-weight: 800;
     }
 
     p {
         font-family: $font-C;
+        line-height: 1.8;
+        margin-top: 1rem;
     }
-
 
     li:nth-child(1) {
         grid-column: 5/span 2;
@@ -65,6 +67,53 @@
 
     li:nth-child(5) {
         grid-column: 6/span 2;
+        grid-row: 9/span 2;
+    }
+}
+
+// ---section-paragraph-middle
+
+.white-bottom {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr 5fr 5fr 3fr 1fr;
+    max-width: 1440px;
+    list-style: none;
+
+    h2 {
+        font-family: $font-A;
+        font-size: 4.4rem;
+        font-weight: 800;
+    }
+
+    p {
+        font-family: $font-C;
+        line-height: 1.8;
+        margin-top: 1rem;
+    }
+
+    li:nth-child(1) {
+        grid-column: 2/span 2;
+        grid-row: 4/span 2;
+    }
+
+    li:nth-child(3) {
+        grid-column: 5/span 1;
+        grid-row: 5 / span 2;
+        margin-top: 10vh;
+    }
+
+    li:nth-child(4) {
+        grid-column: 4/span 1;
+        grid-row: 7 / span 2;
+    }
+
+    li:nth-child(5) {
+        grid-column: 1/span 2;
+        grid-row: 7/span 2;
+    }
+
+    li:nth-child(6) {
+        grid-column: 5/span 2;
         grid-row: 9/span 2;
     }
 }
