--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,15 @@ body {
   line-height: 1.8;
   margin-top: 1rem;
 }
+.white-middle li:nth-child(2) {
+  grid-column: 1/span 4;
+  grid-row: 3/span 2;
+  background: black;
+}
+.white-middle li:nth-child(6) {
+  grid-row: 3/span 2;
+  background: black;
+}
 .white-middle li:nth-child(1) {
   grid-column: 5/span 2;
   grid-row: 4/span 2;
@@ -70,9 +79,11 @@ body {
 
 .white-bottom {
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr 5fr 5fr 3fr 1fr;
+  grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
+  grid-template-rows: repeat(13, 10%);
   max-width: 1440px;
   list-style: none;
+  margin-top: 10vh;
 }
 .white-bottom h2 {
   font-family: "LarishA";
@@ -89,21 +100,31 @@ body {
   grid-row: 4/span 2;
 }
 .white-bottom li:nth-child(3) {
-  grid-column: 5/span 1;
+  grid-column: 5/span 2;
   grid-row: 5/span 2;
   margin-top: 10vh;
 }
 .white-bottom li:nth-child(4) {
   grid-column: 4/span 1;
   grid-row: 7/span 2;
+  margin-top: 10vh;
 }
 .white-bottom li:nth-child(5) {
   grid-column: 1/span 2;
   grid-row: 7/span 2;
+  margin-top: 10vh;
 }
 .white-bottom li:nth-child(6) {
-  grid-column: 5/span 2;
+  grid-column: 4/span 3;
   grid-row: 9/span 2;
+  margin-left: 20%;
+  margin-top: 20vh;
+}
+.white-bottom li:nth-child(7) {
+  background-color: black;
+  grid-column: 1/span 7;
+  grid-row: 13/span 2;
+  z-index: -1;
 }
 
 img {
