--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,11 +76,15 @@ body {
   grid-column: 6/span 2;
   grid-row: 9/span 2;
 }
+.white-middle img {
+  display: block;
+  width: 100%;
+}
 
 .white-bottom {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
-  grid-template-rows: repeat(13, 10%);
+  grid-template-rows: repeat(11, 10%);
   max-width: 1440px;
   list-style: none;
   margin-top: 10vh;
@@ -97,39 +101,120 @@ body {
 }
 .white-bottom li:nth-child(1) {
   grid-column: 2/span 2;
-  grid-row: 4/span 2;
+  grid-row: 1/span 2;
 }
 .white-bottom li:nth-child(3) {
   grid-column: 5/span 2;
-  grid-row: 5/span 2;
+  grid-row: 2/span 2;
   margin-top: 10vh;
 }
 .white-bottom li:nth-child(4) {
   grid-column: 4/span 1;
-  grid-row: 7/span 2;
+  grid-row: 4/span 2;
   margin-top: 10vh;
 }
 .white-bottom li:nth-child(5) {
   grid-column: 1/span 2;
-  grid-row: 7/span 2;
+  grid-row: 4/span 2;
   margin-top: 10vh;
 }
 .white-bottom li:nth-child(6) {
   grid-column: 4/span 3;
-  grid-row: 9/span 2;
+  grid-row: 6/span 2;
   margin-left: 20%;
   margin-top: 20vh;
 }
 .white-bottom li:nth-child(7) {
   background-color: black;
   grid-column: 1/span 7;
-  grid-row: 13/span 2;
+  grid-row: 10/span 1;
   z-index: -1;
 }
-
-img {
+.white-bottom img {
   display: block;
   width: 100%;
+}
+
+.bear-head-text {
+  display: flex;
+  background-color: black;
+  color: white;
+}
+.bear-head-text .head {
+  width: 40%;
+}
+.bear-head-text .head h2 {
+  font-size: 4.4rem;
+  font-family: "LarishA";
+}
+.bear-head-text .head p {
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.8;
+}
+.bear-head-text .text {
+  width: 40%;
+}
+.bear-head-text .text p:first-child {
+  font-size: 1.2rem;
+  font-family: "LarishB";
+  line-height: 1.8;
+}
+.bear-head-text .text p:last-child {
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.8;
+  margin-top: 5vh;
+}
+
+.poppy-head-text {
+  display: flex;
+  background-color: white;
+  color: black;
+}
+.poppy-head-text .head {
+  width: 40%;
+}
+.poppy-head-text .head h2 {
+  font-size: 4.4rem;
+  font-family: "LarishA";
+}
+.poppy-head-text .head p {
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.8;
+}
+.poppy-head-text .text {
+  width: 40%;
+}
+.poppy-head-text .text p:first-child {
+  font-size: 1.2rem;
+  font-family: "LarishB";
+  line-height: 1.8;
+}
+.poppy-head-text .text p:last-child {
+  font-family: "Work Sans", sans-serif;
+  line-height: 1.8;
+  margin-top: 5vh;
+}
+
+.bear-images {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
+  grid-template-rows: 1fr 5fr 1fr 1fr;
+  max-width: 1440px;
+  list-style: none;
+  background: black;
+}
+.bear-images img:first-child {
+  display: block;
+  width: 100%;
+  grid-column: 2/span 3;
+  grid-row: 2;
+}
+.bear-images img:last-child {
+  display: block;
+  width: 75%;
+  grid-column: 4/span 2;
+  grid-row: 2;
+  margin: 35% 49%;
 }
 
 /* =================================== */
