--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -80,6 +80,11 @@
         grid-column: 6/span 2;
         grid-row: 9/span 2;
     }
+
+    img {
+        display: block;
+        width: 100%;
+    }
 }
 
 // ---section-paragraph-middle
@@ -87,7 +92,7 @@
 .white-bottom {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
-    grid-template-rows: repeat(13, 10%);
+    grid-template-rows: repeat(11, 10%);
     max-width: 1440px;
     list-style: none;
     margin-top: 10vh;
@@ -106,32 +111,32 @@
 
     li:nth-child(1) {
         grid-column: 2/span 2;
-        grid-row: 4/span 2;
+        grid-row: 1/span 2;
     }
 
     li:nth-child(3) {
         grid-column: 5/span 2;
-        grid-row: 5 / span 2;
+        grid-row: 2 / span 2;
         margin-top: 10vh;
     }
 
     li:nth-child(4) {
         grid-column: 4/span 1;
-        grid-row: 7 / span 2;
+        grid-row: 4 / span 2;
         margin-top: 10vh;
 
     }
 
     li:nth-child(5) {
         grid-column: 1/span 2;
-        grid-row: 7/span 2;
+        grid-row: 4/span 2;
         margin-top: 10vh;
 
     }
 
     li:nth-child(6) {
         grid-column: 4/span 3;
-        grid-row: 9/span 2;
+        grid-row: 6/span 2;
         margin-left: 20%;
         margin-top: 20vh;
     }
@@ -139,16 +144,128 @@
     li:nth-child(7) {
         background-color: black;
         grid-column: 1/span 7;
-        grid-row: 13/span 2;
+        grid-row: 10/span 1;
         z-index: -1;
+    }
+
+    img {
+        display: block;
+        width: 100%;
+    }
+}
+
+
+
+// ----section --- bear---
+
+.bear-head-text {
+    display: flex;
+    background-color: black;
+    color: white;
+
+    .head {
+        width: 40%;
+
+        h2 {
+            font-size: 4.4rem;
+            font-family: $font-A;
+        }
+
+        p {
+            font-family: $font-C;
+            line-height: 1.8;
+        }
+    }
+
+    .text {
+        width: 40%;
+
+        p:first-child {
+            font-size: 1.2rem;
+            font-family: $font-B;
+            line-height: 1.8;
+
+        }
+
+        p:last-child {
+            font-family: $font-C;
+            line-height: 1.8;
+            margin-top: 5vh;
+        }
     }
 
 }
 
-img {
-    display: block;
-    width: 100%;
+// ----section --- poppy---
+
+.poppy-head-text {
+    display: flex;
+    background-color: white;
+    color: black;
+
+    .head {
+        width: 40%;
+
+        h2 {
+            font-size: 4.4rem;
+            font-family: $font-A;
+        }
+
+        p {
+            font-family: $font-C;
+            line-height: 1.8;
+        }
+    }
+
+    .text {
+        width: 40%;
+
+        p:first-child {
+            font-size: 1.2rem;
+            font-family: $font-B;
+            line-height: 1.8;
+
+        }
+
+        p:last-child {
+            font-family: $font-C;
+            line-height: 1.8;
+            margin-top: 5vh;
+        }
+    }
 }
+
+// -----section-image--bear-grid
+
+
+.bear-images {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr 1fr;
+    max-width: 1440px;
+    list-style: none;
+    background: black;
+
+    img:first-child {
+        display: block;
+        width: 100%;
+        grid-column: 2 /span 3;
+        grid-row: 2;
+    }
+
+    img:last-child {
+        display: block;
+        width: 75%;
+        grid-column: 4 /span 2;
+        grid-row: 2;
+        margin: 35% 49%;
+    }
+
+}
+
+
+// -----section-image--poppy-bear-grid
+.poppy-images {}
 
 
 /* =================================== */
