--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,9 +139,11 @@ body {
   display: flex;
   background-color: black;
   color: white;
+  padding-bottom: 20vh;
 }
 .bear-head-text .head {
   width: 40%;
+  margin-left: 7%;
 }
 .bear-head-text .head h2 {
   font-size: 4.4rem;
@@ -153,6 +155,7 @@ body {
 }
 .bear-head-text .text {
   width: 40%;
+  margin-top: 2%;
 }
 .bear-head-text .text p:first-child {
   font-size: 1.2rem;
@@ -172,6 +175,7 @@ body {
 }
 .poppy-head-text .head {
   width: 40%;
+  margin-left: 7%;
 }
 .poppy-head-text .head h2 {
   font-size: 4.4rem;
@@ -183,6 +187,7 @@ body {
 }
 .poppy-head-text .text {
   width: 40%;
+  margin-top: 3%;
 }
 .poppy-head-text .text p:first-child {
   font-size: 1.2rem;
@@ -198,23 +203,57 @@ body {
 .bear-images {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
-  grid-template-rows: 1fr 5fr 1fr 1fr;
+  grid-template-rows: 10% 70% 5% 15%;
   max-width: 1440px;
   list-style: none;
   background: black;
+  margin-bottom: 20vh;
 }
 .bear-images img:first-child {
   display: block;
   width: 100%;
   grid-column: 2/span 3;
   grid-row: 2;
+  z-index: 1;
 }
-.bear-images img:last-child {
+.bear-images img:nth-child(2) {
   display: block;
   width: 75%;
   grid-column: 4/span 2;
   grid-row: 2;
-  margin: 35% 49%;
+  margin: 35% 56%;
+  z-index: 1;
+}
+.bear-images p {
+  grid-column: 7 span;
+  grid-row: 2 span;
+  background: white;
+}
+
+.poppy-images {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
+  grid-template-rows: 10% 70% 5% 15%;
+  max-width: 1440px;
+  list-style: none;
+  margin-bottom: 20vh;
+}
+.poppy-images img:first-child {
+  display: block;
+  width: 100%;
+  grid-column: 2/span 3;
+  grid-row: 2;
+  margin-left: 40%;
+  z-index: 1;
+}
+.poppy-images img:nth-child(2) {
+  display: block;
+  width: 75%;
+  grid-column: 4/span 2;
+  grid-row: 2;
+  margin-left: -62%;
+  margin-top: 40%;
+  z-index: 1;
 }
 
 /* =================================== */
