--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -155,16 +155,18 @@
 }
 
 
-
 // ----section --- bear---
 
 .bear-head-text {
     display: flex;
     background-color: black;
     color: white;
+    padding-bottom: 20vh;
+
 
     .head {
         width: 40%;
+        margin-left: 7%;
 
         h2 {
             font-size: 4.4rem;
@@ -179,6 +181,7 @@
 
     .text {
         width: 40%;
+        margin-top: 2%;
 
         p:first-child {
             font-size: 1.2rem;
@@ -205,6 +208,7 @@
 
     .head {
         width: 40%;
+        margin-left: 7%;
 
         h2 {
             font-size: 4.4rem;
@@ -219,6 +223,8 @@
 
     .text {
         width: 40%;
+        margin-top: 3%;
+
 
         p:first-child {
             font-size: 1.2rem;
@@ -237,35 +243,70 @@
 
 // -----section-image--bear-grid
 
-
 .bear-images {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
-    grid-template-rows: 1fr 5fr 1fr 1fr;
+    grid-template-rows: 10% 70% 5% 15%;
     max-width: 1440px;
     list-style: none;
     background: black;
+    margin-bottom: 20vh;
 
     img:first-child {
         display: block;
         width: 100%;
-        grid-column: 2 /span 3;
+        grid-column: 2/span 3;
         grid-row: 2;
+        z-index: 1;
     }
 
-    img:last-child {
+    img:nth-child(2) {
         display: block;
         width: 75%;
         grid-column: 4 /span 2;
         grid-row: 2;
-        margin: 35% 49%;
+        margin: 35% 56%;
+        z-index: 1;
+    }
+
+    // ---white-space-filter
+    p {
+        grid-column: 7 span;
+        grid-row: 2 span;
+        background: white;
     }
 
 }
 
 
 // -----section-image--poppy-bear-grid
-.poppy-images {}
+.poppy-images {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr 5fr 1fr 3fr 1fr;
+    grid-template-rows: 10% 70% 5% 15%;
+    max-width: 1440px;
+    list-style: none;
+    margin-bottom: 20vh;
+
+    img:first-child {
+        display: block;
+        width: 100%;
+        grid-column: 2/span 3;
+        grid-row: 2;
+        margin-left: 40%;
+        z-index: 1;
+    }
+
+    img:nth-child(2) {
+        display: block;
+        width: 75%;
+        grid-column: 4 /span 2;
+        grid-row: 2;
+        margin-left: -62%;
+        margin-top: 40%;
+        z-index: 1;
+    }
+}
 
 
 /* =================================== */
