--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,11 +19,95 @@
 /* =================================== */
 /* ------💀--- h•e•a•d•e•r -💀 ---------*/
 /* =================================== */
+.vertical-line-left {
+    display: flex;
+    justify-content: space-between;
 
 
+    p {
+        background: black;
+        width: 50%;
+        height: 160px;
+        border-right: 0.4px solid rgb(234, 226, 226);
+    }
+}
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+
+    p:first-child {
+        line-height: 1.5rem;
+        font-family: $font-C;
+        padding-top: 10vh;
+    }
+
+    p:nth-of-type(2) {
+        padding-top: 2vh;
+        font-family: $font-C;
+    }
+
+    h1,
+    h3 {
+        font-size: 6rem;
+        font-family: $font-A;
+    }
+
+    h1 {
+        line-height: 0.35;
+        margin-top: 4%;
+    }
+
+    h3 {
+        font-size: 6rem;
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px white;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    img {
+        width: 5%;
+    }
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-family: $font-C;
+        font-weight: 300;
+        border: 1px solid white;
+        padding: 12px 30px;
+    }
+
+    a:hover {
+        color: black;
+        background-color: rgb(234, 226, 226);
+        border-color: rgb(234, 226, 226);
+    }
+
+    img,
+    a {
+        margin: 12vh 10vh 20vh 15vh;
+    }
+}
+
 /* =================================== */
-/* ------🧭-- n•a•v-b•a•r --🧭---------*/
+/* ----------article-intro-------------*/
 /* =================================== */
+.intro {
+    background-color: black;
+    color: white;
+
+
+    h2 {
+        font-size: 5rem;
+        margin-left: 7%;
+    }
+}
 
 /* =================================== */
 /*---------  m•a•i•n  ----------------*/
