--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,11 +24,17 @@
     justify-content: space-between;
 
 
-    p {
+    p:nth-of-type(1) {
         background: black;
         width: 50%;
         height: 160px;
         border-right: 0.4px solid rgb(234, 226, 226);
+    }
+
+    p:nth-of-type(2) {
+        background: black;
+        width: 50%;
+        height: 160px;
     }
 }
 
@@ -108,6 +114,39 @@ header {
         margin-left: 7%;
     }
 }
+
+/* =================================== */
+/* ----------article-facts-------------*/
+/* =================================== */
+.facts {
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
+
+    .figures {
+        margin-top: 25vh;
+        margin-left: 7%;
+        color: white;
+
+
+        p {
+            line-height: 1.5rem;
+            font-family: $font-C;
+            margin: 2vh 0;
+        }
+
+        h2 {
+            font-size: 5rem;
+        }
+    }
+
+    img {
+        width: 50%;
+        margin-bottom: 10vh;
+    }
+}
+
+
 
 /* =================================== */
 /*---------  m•a•i•n  ----------------*/
@@ -334,7 +373,6 @@ header {
     max-width: 1440px;
     list-style: none;
     background: black;
-    margin-bottom: 20vh;
 
     img:first-child {
         display: block;
@@ -358,6 +396,26 @@ header {
         grid-column: 7 span;
         grid-row: 2 span;
         background: white;
+    }
+}
+
+// -----image-circle-animation--------
+
+.circle {
+    width: 22%;
+    position: relative;
+    left: 73%;
+    bottom: 208px;
+    animation: circle 60s infinite;
+
+    @keyframes circle {
+        0% {
+            transform: rotate(-360deg);
+        }
+
+        100% {
+            transform: rotate(360deg);
+        }
     }
 
 }
