--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -455,6 +455,11 @@ header {
 /* --------👣 - f•o•o•t•e•r -----------*/
 /* =================================== */
 
+footer {
+    background-color: black;
+    color: white;
+}
+
 /* =================================== */
 /* --🖥- m•e•d•i•a-q•u•e•r•i•e•s -📲--- */
 /* =================================== */
