--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,6 +378,11 @@ header a {
 /* =================================== */
 /* --------👣 - f•o•o•t•e•r -----------*/
 /* =================================== */
+footer {
+  background-color: black;
+  color: white;
+}
+
 /* =================================== */
 /* --🖥- m•e•d•i•a-q•u•e•r•i•e•s -📲--- */
 /* =================================== */
