--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -456,8 +456,84 @@ header {
 /* =================================== */
 
 footer {
+    padding-top: 15vh;
     background-color: black;
     color: white;
+
+    div>p {
+        font-family: $font-C;
+        margin-left: 7%;
+    }
+
+    section {
+        display: flex;
+        justify-content: space-between;
+        align-items: baseline;
+        margin-left: 4%;
+    }
+
+    article:nth-of-type(2) {
+        margin-left: 7%;
+    }
+
+    article img {
+        width: 2%;
+    }
+
+    div img {
+        width: 20%;
+        margin-left: 7%;
+    }
+
+    nav {
+
+        a {
+            text-decoration: none;
+            color: white;
+            font-family: $font-C;
+            font-weight: 300;
+            border: 1px solid white;
+            padding: 20px 40px;
+            margin-left: 7%;
+        }
+
+        a:hover {
+            color: black;
+            background-color: rgb(234, 226, 226);
+            border-color: rgb(234, 226, 226);
+        }
+
+        margin: 6vh 0 20vh 0;
+
+    }
+
+    section {
+        padding-bottom: 10vh;
+    }
+
+    section div:first-child {
+        width: 50%;
+
+    }
+
+}
+
+.footer-text {
+    font-size: 1.5rem;
+
+    p:first-child {
+        font-size: 1.2rem;
+        font-family: $font-C;
+        margin-left: 7%;
+        margin-bottom: 10vh;
+    }
+
+    p {
+        font-family: $font-A;
+        line-height: 1.8;
+        margin-left: 7%;
+    }
+
 }
 
 /* =================================== */
