--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -386,6 +386,7 @@ footer {
 footer div > p {
   font-family: "Work Sans", sans-serif;
   margin-left: 7%;
+  margin-top: 5%;
 }
 footer section {
   display: flex;
@@ -440,6 +441,74 @@ footer section div:first-child {
   font-family: "LarishA";
   line-height: 1.8;
   margin-left: 7%;
+}
+
+footer {
+  position: relative;
+  width: 100%;
+  height: 120vh;
+  background-color: black;
+  padding: 0.5em;
+  overflow: hidden;
+}
+
+.rotate {
+  transform: rotate(45deg);
+}
+
+.recommendation {
+  position: absolute;
+  top: 15%;
+  right: -361px;
+  left: 0%;
+  z-index: 10;
+  font-size: 46px;
+  display: inline-block;
+  font-family: "LarishA";
+  text-align: center;
+  color: #000;
+  border: 5px solid #fff;
+  background: #fff;
+  animation: backnforth 30s linear infinite;
+}
+.recommendation span {
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
+}
+@keyframes backnforth {
+  0% {
+    transform: translateX(80px);
+  }
+  10% {
+    transform: translateX(100px);
+  }
+  20% {
+    transform: translateX(200px);
+  }
+  30% {
+    transform: translateX(300px);
+  }
+  40% {
+    transform: translateX(400px);
+  }
+  50% {
+    transform: translateX(450px);
+  }
+  60% {
+    transform: translateX(450px);
+  }
+  70% {
+    transform: translateX(400px);
+  }
+  80% {
+    transform: translateX(300px);
+  }
+  90% {
+    transform: translateX(200px);
+  }
+  100% {
+    transform: translateX(100px);
+  }
 }
 
 /* =================================== */
