--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -39,6 +39,7 @@
 }
 
 header {
+
     background-color: black;
     color: white;
     text-align: center;
@@ -463,6 +464,7 @@ footer {
     div>p {
         font-family: $font-C;
         margin-left: 7%;
+        margin-top: 5%;
     }
 
     section {
@@ -535,6 +537,102 @@ footer {
     }
 
 }
+
+// ----banderole
+
+footer {
+    position: relative;
+    width: 100%;
+    height: 120vh;
+    background-color: black;
+    padding: 0.5em;
+    overflow: hidden;
+}
+
+.rotate {
+    transform: rotate(45deg);
+}
+
+.recommendation {
+    position: absolute;
+    top: 15%;
+    right: -361px;
+    left: 0%;
+    z-index: 10;
+    font-size: 46px;
+    display: inline-block;
+    font-family: "LarishA";
+    text-align: center;
+    color: #000;
+    border: 5px solid #fff;
+    background: #fff;
+    animation: backnforth 30s linear infinite;
+
+    span {
+        -webkit-text-fill-color: transparent;
+        -webkit-text-stroke: 1px rgb(0, 0, 0);
+    }
+
+    @keyframes backnforth {
+
+        0% {
+            transform: translateX(80px);
+        }
+
+        10% {
+            transform: translateX(100px);
+
+        }
+
+        20% {
+            transform: translateX(200px);
+
+        }
+
+        30% {
+            transform: translateX(300px);
+
+        }
+
+        40% {
+            transform: translateX(400px);
+
+        }
+
+        50% {
+            transform: translateX(450px);
+
+        }
+
+        60% {
+            transform: translateX(450px);
+
+        }
+
+        70% {
+            transform: translateX(400px);
+
+        }
+
+        80% {
+            transform: translateX(300px);
+
+        }
+
+        90% {
+            transform: translateX(200px);
+
+        }
+
+        100% {
+            transform: translateX(100px);
+
+        }
+    }
+
+}
+
+
 
 /* =================================== */
 /* --🖥- m•e•d•i•a-q•u•e•r•i•e•s -📲--- */
