--- a/assets/scss/_generals.scss
+++ b/assets/scss/_generals.scss
@@ -9,11 +9,14 @@ html {
     font-size: 100%;
 }
 
+
+
+html,
 body {
-    max-width: 1440px;
+    max-width: 100%;
+    overflow-x: hidden;
     margin: 0 auto;
+    max-width: 1440px;
 }
-
-
 
 /* =================================== */
