--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,6 +281,7 @@ header a {
   display: flex;
   background-color: white;
   color: black;
+  padding-bottom: 20vh;
 }
 .poppy-head-text .head {
   width: 40%;
